src/deploy/kubernetes/infra/monitoring/dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: dashboard
  namespace: kube-system

spec:
  tls:
    - hosts:
        - goafabric.org
      secretName: server-certificate-secret
  rules:
    - host: goafabric.org
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
            path: /
